k8s/models-dev/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: models-dev-strip-hlab
  namespace: models-dev
spec:
  headers:
    customRequestHeaders:
      X-Hlab-User-Id: ""
      X-Hlab-Username: ""
      X-Hlab-Display-Name: ""
      X-Hlab-Email: ""
      X-Hlab-Groups: ""
      X-Hlab-Roles: ""
      X-Hlab-Scopes: ""
