k8s/models-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: models-dev
  labels:
    app.kubernetes.io/name: models
