k8s/models-dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: models-dev
  namespace: models-dev
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`models-dev.waylonwalker.com`)
      middlewares:
        - name: models-dev-auth
      services:
        - name: models-dev
          port: 8080
